chore: Mitigate cve-2025-55183 and cve-2025-55184

--- a/apps/workshop/package.json
+++ b/apps/workshop/package.json
@@ -17,8 +17,8 @@
         "@mantine/hooks": "^7.15.3",
         "@rainbow-me/rainbowkit": "2",
         "@tanstack/react-query": "catalog:",
-        "react": "^19.2.1",
-        "react-dom": "^19.2.1",
+        "react": "catalog:",
+        "react-dom": "catalog:",
         "react-icons": "^4",
         "serve": "^14.2.1",
         "viem": "catalog:",
