--- a/apps/dave/package.json
+++ b/apps/dave/package.json
@@ -24,8 +24,8 @@
         "date-fns": "^4.1.0",
         "humanize-duration": "^3.33.1",
         "ramda": "^0.31.3",
-        "react": "^19.2.1",
-        "react-dom": "^19.2.1",
+        "react": "catalog:",
+        "react-dom": "catalog:",
         "react-icons": "^5.5.0",
         "react-router": "^7.9.2",
         "viem": "catalog:"
