--- a/packages/domain/package.json
+++ b/packages/domain/package.json
@@ -57,7 +57,7 @@
     "dependencies": {
         "graphql": "16.8.1",
         "graphql-tag": "2.12.6",
-        "react": "^19.2.1",
+        "react": "catalog:",
         "urql": "^4"
     },
     "devDependencies": {
