--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -8,6 +8,8 @@ catalog:
     viem: ^2.38.4
     wagmi: ^2.18.2
     "@tanstack/react-query": ^5.90.10
+    react: "^19.2.3"
+    "react-dom": "^19.2.3"
 
 onlyBuiltDependencies:
     - "@parcel/watcher"
